csfr exempt api. api upload template controller
